argocd/stalwart/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stalwart
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: nginx
  rules:
    - host: "mail.dev-thundermail.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stalwart
                port:
                  name: https
